...
            <objects>
                <viewController id="oJs-PL-cT3" customClass="RegisterUserViewController" customModule="Travo_App" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ANv-Fj-KFp">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="dd3-ON-gW8">
                                <rect key="frame" x="16" y="30" width="40" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="3lz-hZ-URM"/>
                                    <constraint firstAttribute="width" secondItem="dd3-ON-gW8" secondAttribute="height" multiplier="1:1" id="8SF-oU-yEF"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="KKt-Ki-OL2"/>
                                    <constraint firstAttribute="height" constant="60" id="M97-e9-ScD">
...
                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="70" id="by1-4J-gc2">
                                        <variation key="heightClass=compact-widthClass=compact" constant="50"/>
                                    </constraint>
                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="110" id="pY7-vC-FE7"/>
                                </constraints>
                                <attributedString key="attributedText">
                                    <fragment content="Create Account">
                                        <attributes>
                                            <color key="NSColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                            <font key="NSFont" metaFont="system" size="32"/>
                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                        </attributes>
                                    </fragment>
...
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="uploadImage:" destination="oJs-PL-cT3" eventType="touchUpInside" id="mja-bw-THf"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BOp-rp-9gy" customClass="UnderlinedTextField" customModule="Travo_App" customModuleProvider="target">
                                <rect key="frame" x="16" y="231" width="288" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ikN-BK-KyO" customClass="UnderlinedTextField" customModule="Travo_App" customModuleProvider="target">
                                <rect key="frame" x="16" y="190" width="288" height="21"/>
                                <accessibility key="accessibilityConfiguration" hint="Insert Full Name"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="288" id="YyA-So-v5T"/>
                                </constraints>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3A4-dX-tZl" customClass="UnderlinedTextField" customModule="Travo_App" customModuleProvider="target">
                                <rect key="frame" x="16" y="272" width="288" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2bS-4e-CrJ">
                                <rect key="frame" x="284" y="190.5" width="20" height="20"/>
...
                                <color key="backgroundColor" red="0.31372549020000001" green="0.43137254899999999" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="0QO-VV-TbI"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
                                <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Sign up">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
