...
                                                    <constraint firstAttribute="height" constant="65" id="lGq-mq-HHg"/>
                                                </constraints>
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="40j-5g-lKm" userLabel="Heading">
                                                <rect key="frame" x="18" y="73" width="224" height="117"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Where" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s0S-3a-uhf">
                                                        <rect key="frame" x="8" y="0.0" width="135" height="44"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <color key="textColor" red="0.31372549020000001" green="0.43137254899999999" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
...
                                                        <connections>
                                                            <outlet property="category" destination="iNS-Qd-rG8" id="wY6-OZ-Pwd"/>
                                                        </connections>
                                                    </collectionViewCell>
                                                </cells>
                                            </collectionView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Most Popular" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KMs-lk-pc2">
                                                <rect key="frame" x="26" y="276.5" width="100.5" height="19.5"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="100.5" id="3Vc-7D-JcU"/>
                                                    <constraint firstAttribute="height" constant="19.5" id="fq0-og-WjH"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
...
                                                <rect key="frame" x="255" y="275" width="46" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="EZz-io-SCg"/>
                                                    <constraint firstAttribute="width" constant="46" id="VK9-tP-Zs9"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                <state key="normal" title="See all">
                                                    <color key="titleColor" red="0.35686274509999999" green="0.47450980390000003" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="popularSeeAll:" destination="VVl-dG-LDB" eventType="touchUpInside" id="TiU-vy-T7N"/>
                                                    <segue destination="R0P-io-GGH" kind="show" identifier="popularSeeAll" id="JFO-Ba-AiX"/>
                                                </connections>
...
                                                            <outlet property="ratingView" destination="a5E-LF-J6y" id="9oh-Yd-7Wg"/>
                                                            <outlet property="timeLabel" destination="Abt-pC-CKR" id="icM-LW-h08"/>
                                                        </connections>
                                                    </collectionViewCell>
                                                </cells>
                                            </collectionView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommended" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fso-bb-QaC">
                                                <rect key="frame" x="26" y="472" width="116" height="18"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="18" id="ETF-ks-mgJ"/>
                                                    <constraint firstAttribute="width" constant="116" id="tMD-et-woG"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
...
