...
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="ATv-Cs-O2L"/>
                                    <constraint firstAttribute="height" constant="40" id="Mk6-vm-9v8"/>
                                    <constraint firstAttribute="width" constant="294" id="nUU-TF-CSL"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
